[package]
name = "try-rwlock"
version = "0.1.0"
authors = ["KaiJewson <kai.jewson@gmail.com>"]
edition = "2018"
description = "Fast non-blocking readers-writer lock"
readme = "README.md"
repository = "https://github.com/KaiJewson/try-rwlock"
license = "MIT OR Apache-2.0"
keywords = ["lock-free", "atomic"]
categories = ["concurrency", "data-structures", "no-std"]

[dependencies]
