[package]
name = "try-rwlock"
version = "0.1.0"
edition = "2021"
description = "Fast non-blocking readers-writer lock"
readme = "README.md"
repository = "https://github.com/SabrinaJewson/try-rwlock"
license = "MIT OR Apache-2.0"
keywords = ["lock-free", "atomic"]
categories = ["concurrency", "data-structures", "no-std"]

[dependencies]
